# Simple-Dev-Cleaner

./: .gitignore  CONTRIBUTORS  README.md  app.py  cleaner.py  cli.py  install.sh  install_packages_again  pyproject.toml  requirements.txt  system_info.py
simple_dev_cleaner/: __init__.py  _config.py  cleaner.py  cli.py  system_info.py  update_check.py
widget/DevCleaner.widget/: index.jsx
