[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-dev-cleaner"
version = "1.0.0"
description = "Limpiador de dependencias de desarrollo para macOS — CLI con menú (node_modules, venv, .venv)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "mgdev02" }
]
keywords = ["cleaner", "dev", "node_modules", "venv", "macos", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "tomli-w>=0.2.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
sdevclean = "simple_dev_cleaner.cli:main"

[project.urls]
Repository = "https://github.com/mgdev02/Simple-Dev-Cleaner"
Homepage = "https://github.com/mgdev02/Simple-Dev-Cleaner"

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_dev_cleaner*"]
